--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "jspdf": "^2.5.1",
