--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "bcryptjs": "^3.0.2",
     "bigint-json": "^1.1.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
